Fix cli package name and folder structure #16

--- a/.github/workflows/test-cli.yml
+++ b/.github/workflows/test-cli.yml
@@ -24,4 +24,4 @@ jobs:
         run: go mod download
 
       - name: Run CLI Tests
-        run: go test -v ./cmd
+        run: go test -v ./cmd/rescope
